[package]
name        = "http_status_code_searcher"
version     = "0.1.2"
authors     = ["atsushi130 <atsushi_main@outlook.jp>"]
license     = "MIT/Apache-2.0"
description = "searchable http status code from command line arguments."
readme      = "readme.md"
repository  = "https://github.com/atsushi130/http-status-code-searcher"
keywords    = ["http", "status", "code", "search", "searcher"]

[dependencies]
rustc-serialize = "0.3"
